Adjust post json
