# swagger_server/controllers/environment_controller.py
@@ -1,7 +1,6 @@
 import connexion
 import six
 
-from imaginairy import imagine, imagine_image_files, ImaginePrompt, WeightedPrompt, LazyLoadingImage
 from swagger_server.models.image_info import ImageInfo  # noqa: E501
 from swagger_server.models.temperature_summary import TemperatureSummary  # noqa: E501
 from swagger_server import util
@@ -19,12 +18,7 @@ def generate_image(body=None):  # noqa: E501
     """
     if connexion.request.is_json:
         body = ImageInfo.from_dict(connexion.request.get_json())  # noqa: E501
-
-    f = open("garage.jpg", 'rb')
-    cont = f.read()
-    f.close()
-
-    return cont
+    return 'do some magic!'
 
 
 def image_summary():  # noqa: E501
