# swagger_server/models/weighted_prompt.py
@@ -1,0 +1,88 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class WeightedPrompt(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, name: str=None, weight: int=None):  # noqa: E501
+        """WeightedPrompt - a model defined in Swagger
+
+        :param name: The name of this WeightedPrompt.  # noqa: E501
+        :type name: str
+        :param weight: The weight of this WeightedPrompt.  # noqa: E501
+        :type weight: int
+        """
+        self.swagger_types = {
+            'name': str,
+            'weight': int
+        }
+
+        self.attribute_map = {
+            'name': 'name',
+            'weight': 'weight'
+        }
+        self._name = name
+        self._weight = weight
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'WeightedPrompt':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The weightedPrompt of this WeightedPrompt.  # noqa: E501
+        :rtype: WeightedPrompt
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def name(self) -> str:
+        """Gets the name of this WeightedPrompt.
+
+
+        :return: The name of this WeightedPrompt.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this WeightedPrompt.
+
+
+        :param name: The name of this WeightedPrompt.
+        :type name: str
+        """
+
+        self._name = name
+
+    @property
+    def weight(self) -> int:
+        """Gets the weight of this WeightedPrompt.
+
+
+        :return: The weight of this WeightedPrompt.
+        :rtype: int
+        """
+        return self._weight
+
+    @weight.setter
+    def weight(self, weight: int):
+        """Sets the weight of this WeightedPrompt.
+
+
+        :param weight: The weight of this WeightedPrompt.
+        :type weight: int
+        """
+
+        self._weight = weight
